--- a/Assignment2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Assignment2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -825,7 +825,7 @@ LightDir=P=-45.000004 Y=-179.999969 R=0.000000
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=154.400
-WindowSize=X=1281.600 Y=721.600
+WindowSize=X=1283.200 Y=723.200
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -847,7 +847,7 @@ BRUSH=../../../../../../Users/aiden.wright/Source/Repos/GPR300/Assignment2/Conte
 FBX=../../../../../../Users/aiden.wright/Source/Repos/GPR300/Assignment2/Content/
 FBXAnim=../../../../../../Users/aiden.wright/Source/Repos/GPR300/Assignment2/Content/
 GenericImport=../../../../../../Users/aiden.wright/Source/Repos/GPR300/Assignment2/Content/
-GenericExport=../../../../../../Users/aiden.wright/Source/Repos/GPR300/Assignment2/Content/
+GenericExport=C:/Users/aiden.wright/Source/Repos/GPR300_Pinball_Final/Content/Aiden
 GenericOpen=../../../../../../Users/aiden.wright/Source/Repos/GPR300/Assignment2/Content/
 GenericSave=../../../../../../Users/aiden.wright/Source/Repos/GPR300/Assignment2/Content/
 MeshImportExport=../../../../../../Users/aiden.wright/Source/Repos/GPR300/Assignment2/Content/
